# hemp-rs

./: README.md
hemp/: Cargo.toml
hemp/src/: halfedge.rs  main.rs
